feat: Agrega el metodo focus al input

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Lista de Tareas</h1>
     <input type="text" id="nuevaTarea" placeholder="Ingresa nueva tarea">
-    <button id="agregarTarea" onclick="capturarTexto()">Agregar Tarea</button>
+    <button id="agregarTarea" onclick="agregarTexto()">Agregar Tarea</button>
     <ul id="listaTareas">
         
     </ul>
